# TSPedal

./: CMakeLists.txt  README.md  TSPedal.jucer
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: CMakeLists.txt  ClipperChannel.cpp  ClipperChannel.h  DspChannel.cpp  DspChannel.h  PedalComponent.cpp  PedalComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ToneChannel.cpp  ToneChannel.h
Source/Components/: CMakeLists.txt
Source/DSP/: CMakeLists.txt  ClipperChannel.cpp  DspChannel.cpp  DspChannel.h  ToneChannel.cpp  ToneChannel.h
